--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -1,4 +1,4 @@
-IDI_ICON1 ICON DISCARDABLE "icons/CinnamonCoin.ico"
+IDI_ICON1 ICON DISCARDABLE "icons/ExileCoin.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
 #include "../../clientversion.h" // holds the needed client version information
@@ -18,14 +18,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "CinnamonCoin"
-            VALUE "FileDescription",    "CinnamonCoin-Qt (OSS GUI client for CinnamonCoin)"
+            VALUE "CompanyName",        "ExileCoin"
+            VALUE "FileDescription",    "ExileCoin-Qt (OSS GUI client for ExileCoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "CinnamonCoin-qt"
-            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The CinnamonCoin & PPCoin developers"
+            VALUE "InternalName",       "ExileCoin-qt"
+            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The ExileCoin & PPCoin developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "CinnamonCoin-qt.exe"
-            VALUE "ProductName",        "CinnamonCoin-Qt"
+            VALUE "OriginalFilename",   "ExileCoin-qt.exe"
+            VALUE "ProductName",        "ExileCoin-Qt"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
